# agentic-control

./: .dockerignore  .gitignore  .mcp.json  01-solution-brief.md  05-state-and-lifecycle-model.md  08-architecture-decisions.md  10-operating-model.md  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  Dockerfile  GLOSSARY.md  README.md  alembic.ini  pyproject.toml
.claude/: settings.json
.claude/agents/: spec-reviewer.md
.codex/: config.toml
.github/workflows/: ci.yml
Plans/: f-r-die-cli-erwarte-golden-meadow.md  option-3-ich-m-chte-serialized-oasis.md
archive/: 12-open-questions.md  README.md  REVIEW.md
archive/legacy-notes/: 00-README.md  02-reference-architecture.md  03-architecture-guardrails.md  04-bounded-contexts.md  06-trust-failure-and-escalation.md  07-implementation-handoff.md  09-canonical-domain-model.md  11-glossary.md
config/dispatch/: benchmark-task-mapping.yaml  model-inventory.yaml  routing-pins.yaml
config/execution/: tool-risk-inventory.yaml
docs/decisions/: 0001-five-modules-not-thirteen.md  0002-dbos-durable-execution.md  0003-sqlite-litestream-persistence.md  0004-headless-agents-pydantic-ai.md  0005-four-stage-standards-lifecycle.md  0006-eight-layer-sandbox-mvs.md  0007-inbox-hitl-cascade.md  0008-four-scope-budget-gate.md  0009-agents-md-as-source-claude-symlink.md  0010-execution-harness-contract.md  0011-runtime-audit-and-run-attempts.md  0012-hitl-timeout-semantics.md  0013-v1-deployment-mode.md  0014-peer-adapters-and-cost-aware-routing.md  0016-config-write-contract.md  (+5 more)
migrations/: env.py
scripts/: smoke.sh
tests/: conftest.py
(+81 files in other folders)
