[project]
name = "agentic-control"
version = "0.1.0"
description = "Personal Agentic Control System — v0 (handbetrieb mit Schema)"
authors = [
    { name = "Thomas Krahn", email = "ntbc@gmx.net" }
]
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.10",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14",
    "typer>=0.15",
    "click>=8.1",
    "xdg-base-dirs>=6.0.2",
]

[project.scripts]
agentctl = "agentic_control.cli.main:app"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "ruff>=0.9",
    "mypy>=1.14",
]

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py314"
extend-exclude = ["migrations/versions"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.14"
strict = true
files = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

# Connection-layer linter: enforced by tests/unit/test_orm_isolation.py
# (import-linter cannot forbid subpackages of external packages).
